--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Hello Git!</h1>
     <p>Hello World</p>
     <h2>Hello Michael!</h2>
+    dslkj;ka;la
 </body>
 <script src="./main.js"></script>
 </html>
